--- a/templates/template.html
+++ b/templates/template.html
@@ -192,7 +192,7 @@
         <!-- template -->
         <template id="tab-template">
             <button class="tablinks" id="button_<%= id %>"
-                            onclick="choosetab('disp_<%= id %>','button_<%= id %>')">DEFAULT</button>
+                onclick="choosetab('disp_<%= id %>','button_<%= id %>')">DEFAULT</button>
         </template>
 
         <!-- template -->
@@ -202,6 +202,7 @@
                     <div
                         class="join-area d-flex justify-content-center align-items-center w-100 h-100">
                         <button class="join-button btn btn-warning">Participate</button>
+                        <!-- experiment -->
                     </div>
                     <div class="player-area d-none">
                         <div id="player-<%= streamName %>">
@@ -265,7 +266,6 @@
 
         <script src="/static/js/ovenspace.js"></script>
 
-    
 
     </body>
 
