moved ovenlivekit to local, try fix operating order bug

--- a/templates/template.html
+++ b/templates/template.html
@@ -259,8 +259,9 @@
         <script src="https://cdn.jsdelivr.net/npm/hls.js@latest/dist/hls.min.js"></script>
 
         <!-- Load OvenLiveKit For Web -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/ovenlivekit@1.0.4/dist/OvenLiveKit.min.js"></script>
+        <script src="/static/js/ovenlivekit.js"></script>
+        <!-- <script
+            src="https://cdn.jsdelivr.net/npm/ovenlivekit@1.0.4/dist/OvenLiveKit.min.js"></script> -->
         <!-- Load OvenPlayer -->
         <script src="https://cdn.jsdelivr.net/npm/ovenplayer/dist/ovenplayer.js"></script>
 
