--- a/templates/template.html
+++ b/templates/template.html
@@ -30,16 +30,20 @@
             <div class="header">
                 <div
                     class=" container d-flex flex-column flex-sm-row align-items-sm-end justify-content-between py-4">
+                    <div>
+                        <h3 id="title"><img src="/static/img/xrcube_logo.png" width="170"
+                                alt="XR Cube"> | Dashboard</h3>
+                    </div>
                     <div class="tab">
 
                     </div>
-                    <div class="mt-3 text-end mt-sm-0">
+                    <!-- <div class="mt-3 text-end mt-sm-0">
                         Users:
                         <span id="total-user-count-span" class="fw-bold">0</span>
                         ,
                         Video Users:
                         <span id="video-user-count-span" class="fw-bold">0</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
@@ -192,7 +196,7 @@
         <!-- template -->
         <template id="tab-template">
             <button class="tablinks" id="button_<%= id %>"
-                            onclick="choosetab('disp_<%= id %>','button_<%= id %>')">DEFAULT</button>
+                onclick="choosetab('disp_<%= id %>','button_<%= id %>')">DEFAULT</button>
         </template>
 
         <!-- template -->
@@ -244,6 +248,7 @@
             // new config
             const SEAT_PAGES = '{{seat_pages}}';
             const MAX_STREAM_PER_PAGE = '{{max_stream_per_page}}';
+            const DISABLE_REGISTER = '{{disable_register}}';
         </script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -257,6 +262,14 @@
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/hls.js@latest/dist/hls.min.js"></script>
 
+        <!-- <script>
+            if (DISABLE_REGISTER == 'True') {
+                $(".join-button").each(function () {
+                    return this;
+                }).hide();
+            }
+        </script> -->
+
         <!-- Load OvenLiveKit For Web -->
         <script
             src="https://cdn.jsdelivr.net/npm/ovenlivekit@1.0.4/dist/OvenLiveKit.min.js"></script>
@@ -265,7 +278,9 @@
 
         <script src="/static/js/ovenspace.js"></script>
 
-    
+
+
+
 
     </body>
 
