--- a/templates/template.html
+++ b/templates/template.html
@@ -31,19 +31,23 @@
                 <div
                     class=" container d-flex flex-column flex-sm-row align-items-sm-end justify-content-between py-4">
                     <div>
-                        <h3 id="title"><img src="/static/img/xrcube_logo.png" width="170"
-                                alt="XR Cube"> | Dashboard</h3>
+                        <h3><img src="/static/img/xrcube_logo.png" width="170" alt="XR Cube"> |
+                            Dashboard<span id="title" class="d-none" style="color:black"> - Register
+                                Admin</span></h3>
                     </div>
-                    <div class="tab">
 
-                    </div>
-                    <!-- <div class="mt-3 text-end mt-sm-0">
+                    <div class="mt-3 text-end mt-sm-0">
                         Users:
                         <span id="total-user-count-span" class="fw-bold">0</span>
                         ,
                         Video Users:
                         <span id="video-user-count-span" class="fw-bold">0</span>
-                    </div> -->
+                    </div>
+                </div>
+                <div class="container d-flex flex-row-reverse">
+                    <div class="tab">
+
+                    </div>
                 </div>
             </div>
 
@@ -54,8 +58,8 @@
         </div>
 
         <!-- Modal -->
-        <div class="modal fade input-device-modal" id="input-device-modal" index="-1"
-            role="dialog" aria-hidden="true">
+        <div class="modal fade input-device-modal" id="input-device-modal" index="-1" role="dialog"
+            aria-hidden="true">
             <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -202,6 +206,7 @@
         <!-- template -->
         <template id="seat-template">
             <div class="col-6 col-md-6 col-lg-4">
+
                 <div id="seat-<%= streamName %>" class="seat mb-4 ratio ratio-16x9">
                     <div
                         class="join-area d-flex justify-content-center align-items-center w-100 h-100">
@@ -222,6 +227,9 @@
                             class="leave-area d-flex justify-content-center align-items-center w-100 h-100 position-absolute top-0 left-0">
                             <button class="leave-button btn btn-warning">Leave</button>
                         </div>
+                    </div>
+                    <div class="name-holder h-25">
+                        <p id="stream-name" class="fa-2x"></p>
                     </div>
                 </div>
             </div>
@@ -248,7 +256,7 @@
             // new config
             const SEAT_PAGES = '{{seat_pages}}';
             const MAX_STREAM_PER_PAGE = '{{max_stream_per_page}}';
-            const DISABLE_REGISTER = '{{disable_register}}';
+            const REGISTER_MODE = '{{register_mode}}';
         </script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
@@ -261,14 +269,6 @@
             integrity="sha512-eVL5Lb9al9FzgR63gDs1MxcDS2wFu3loYAgjIH0+Hg38tCS8Ag62dwKyH+wzDb+QauDpEZjXbMn11blw8cbTJQ=="
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/hls.js@latest/dist/hls.min.js"></script>
-
-        <!-- <script>
-            if (DISABLE_REGISTER == 'True') {
-                $(".join-button").each(function () {
-                    return this;
-                }).hide();
-            }
-        </script> -->
 
         <!-- Load OvenLiveKit For Web -->
         <script
