--- a/static/css/ovenspace.css
+++ b/static/css/ovenspace.css
@@ -139,7 +139,7 @@ h6 {
 }
 
 .header {
-    background: #fff;
+    background: lightgray
 }
 
 .footer {
@@ -237,24 +237,28 @@ h6 {
 }
 
 .tablinks {
-    background-color: white;
-    border: 2px solid black;
+    background-color: lightgray;
+    /* border: 2px solid black; */
+    border: none;
     padding: 10px 20px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 12px;
+    
 
 }
 
 .tablinks:hover {
-    background-color: #FFBB10;
-    color: white;
+    background-color: #edeae3;
+    color: black;
+
 }
 
 .curtab {
-    background-color: #FFBB10;
-    color: white;
+    background-color: #edeae3;
+    color: black;
+    
 }
 
 #stream-name {
@@ -267,5 +271,4 @@ h6 {
 
 .name-holder {
     left: 10px;
-
 }
