imported ovenlivekit for metadata

--- a/templates/template.html
+++ b/templates/template.html
@@ -236,10 +236,14 @@
                     <div class="ratio ratio-16x9" style="background-color: lightgray;">
                         <div class="d-flex flex-column align-items-center">
                             <h3><u>XR Connection #<span id="connect_no"></span></u></h3>
-                            <p style="font-size: medium;"><b>Edge IP:</b> <span id="edge_ip"></span></p>
-                            <p style="font-size: medium;"><b>Edge Resolution:</b> <span id="edge_resolution"></span></p>
-                            <p style="font-size: medium;"><b>Terminal IP:</b> <span id="terminal_ip"></span></p>
-                            <p style="font-size: medium;"><b>Terminal Resolution:</b> <span id="terminal_resolution"></span></p>
+                            <p style="font-size: medium;"><b>Edge IP:</b> <span id="edge_ip"></span>
+                            </p>
+                            <p style="font-size: medium;"><b>Edge Resolution:</b> <span
+                                    id="edge_resolution"></span></p>
+                            <p style="font-size: medium;"><b>Terminal IP:</b> <span
+                                    id="terminal_ip"></span></p>
+                            <p style="font-size: medium;"><b>Terminal Resolution:</b> <span
+                                    id="terminal_resolution"></span></p>
                         </div>
                     </div>
                 </div>
@@ -322,8 +326,9 @@
         <script src="https://cdn.jsdelivr.net/npm/hls.js@latest/dist/hls.min.js"></script>
 
         <!-- Load OvenLiveKit For Web -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/ovenlivekit@1.0.4/dist/OvenLiveKit.min.js"></script>
+        <!-- <script
+            src="https://cdn.jsdelivr.net/npm/ovenlivekit@1.0.4/dist/OvenLiveKit.min.js"></script> -->
+        <script src="/static/js/ovenlivekit.js"></script>
         <!-- Load OvenPlayer -->
         <script src="https://cdn.jsdelivr.net/npm/ovenplayer/dist/ovenplayer.js"></script>
 
