--- a/templates/template.html
+++ b/templates/template.html
@@ -10,6 +10,7 @@
 
         <title>XR Dashboard</title>
 
+        <link rel="shortcut icon" href="/static/img/xrcube_logo.ico">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
             rel="stylesheet">
         <link
@@ -326,8 +327,9 @@
         <script src="https://cdn.jsdelivr.net/npm/hls.js@latest/dist/hls.min.js"></script>
 
         <!-- Load OvenLiveKit For Web -->
-        <script src="/static/js/ovenlivekit.js"></script>
-        
+        <script
+            src="https://cdn.jsdelivr.net/npm/ovenlivekit@1.0.4/dist/OvenLiveKit.min.js"></script>
+
         <!-- Load OvenPlayer -->
         <script src="https://cdn.jsdelivr.net/npm/ovenplayer/dist/ovenplayer.js"></script>
 
