--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -9,10 +9,10 @@
         <div id="dashboard">
             <iframe
                 src="http://localhost:3000/d-solo/ceb159fe-e53f-4742-a5c6-fe8f71d7d1b9/prometheus-test?orgId=1&from=now-24h&to=now&refresh=5s&panelId=1"
-                width="550" height="350" frameborder="0"></iframe>
+                width="550" height="350" frameborder="0" style="pointer-events: none;"></iframe>
             <iframe
                 src="http://localhost:3000/d-solo/ceb159fe-e53f-4742-a5c6-fe8f71d7d1b9/prometheus-test?orgId=1&from=now-24h&to=now&refresh=5s&panelId=2"
-                width="550" height="350" frameborder="0"></iframe>
+                width="550" height="350" frameborder="0" style="pointer-events: none;"></iframe>
         </div>
     </body>
 
