--- a/templates/template.html
+++ b/templates/template.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="OvenMediaEngine OvenPlayer WebRTC Input Conference Demo">
-        <meta name="author" content="Airensoft">
+        <meta name="description" content="Monitoring dashboard for XR Cube">
+        <meta name="author" content="Thomas Peng">
 
         <title>XR Dashboard</title>
 
@@ -334,10 +334,6 @@
         <script src="https://cdn.jsdelivr.net/npm/ovenplayer/dist/ovenplayer.js"></script>
 
         <script src="/static/js/ovenspace.js"></script>
-
-
-
-
 
     </body>
 
