--- a/templates/template.html
+++ b/templates/template.html
@@ -287,11 +287,12 @@
                             autoplay playsinline>
 
                         </video>
-                        <span class="local-player-span">Local Stream</span>
+
                         <div
                             class="leave-area d-flex justify-content-center align-items-center w-100 h-100 position-absolute top-0 left-0">
                             <button class="leave-button btn btn-warning">Leave</button>
                         </div>
+                        <span class="local-player-span">Stats</span>
                     </div>
                     <div class="name-holder h-25">
                         <p id="stream-name" class="fa-2x"></p>
