--- a/static/css/ovenspace.css
+++ b/static/css/ovenspace.css
@@ -199,7 +199,7 @@ h6 {
     padding: 0.1rem 0.3rem;
     border-radius: 0.2rem;
     right: 0.5rem;
-    top: 0.5rem;
+    bottom: 0.5rem;
     font-size: 0.5rem;
     cursor: default;
 }
