--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,12 +7,19 @@
 
     <body>
         <div id="dashboard">
-            <iframe
-                src="http://localhost:3000/d-solo/ceb159fe-e53f-4742-a5c6-fe8f71d7d1b9/prometheus-test?orgId=1&from=now-24h&to=now&refresh=5s&panelId=1"
-                width="550" height="350" frameborder="0" style="pointer-events: none;"></iframe>
-            <iframe
-                src="http://localhost:3000/d-solo/ceb159fe-e53f-4742-a5c6-fe8f71d7d1b9/prometheus-test?orgId=1&from=now-24h&to=now&refresh=5s&panelId=2"
-                width="550" height="350" frameborder="0" style="pointer-events: none;"></iframe>
+            <script>
+                // let host = 'localhost';
+                let host = '192.168.4.240';
+
+                let src1 = "http://" + host + ":3000/d-solo/ceb159fe-e53f-4742-a5c6-fe8f71d7d1b9/prometheus-test?orgId=1&from=now-24h&to=now&refresh=5s&panelId=1";
+                let src2 = "http://" + host + ":3000/d-solo/ceb159fe-e53f-4742-a5c6-fe8f71d7d1b9/prometheus-test?orgId=1&from=now-24h&to=now&refresh=5s&panelId=2";
+
+                document.getElementById("panel1").src = src1;
+                document.getElementById("panel2").src = src2;
+            </script>
+
+            <iframe id="panel1" src="404.html" width="550" height="350" frameborder="0"></iframe>
+            <iframe id="panel2" src="404.html" width="550" height="350" frameborder="0"></iframe>
         </div>
     </body>
 
