implemented https connection

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,8 +11,8 @@
                 // let host = 'localhost';
                 let host = '192.168.4.240';
 
-                let src1 = "http://" + host + ":3000/d-solo/ceb159fe-e53f-4742-a5c6-fe8f71d7d1b9/prometheus-test?orgId=1&from=now-24h&to=now&refresh=5s&panelId=1";
-                let src2 = "http://" + host + ":3000/d-solo/ceb159fe-e53f-4742-a5c6-fe8f71d7d1b9/prometheus-test?orgId=1&from=now-24h&to=now&refresh=5s&panelId=2";
+                let src1 = "https://" + host + ":3000/d-solo/ceb159fe-e53f-4742-a5c6-fe8f71d7d1b9/prometheus-test?orgId=1&from=now-24h&to=now&refresh=5s&panelId=1";
+                let src2 = "https://" + host + ":3000/d-solo/ceb159fe-e53f-4742-a5c6-fe8f71d7d1b9/prometheus-test?orgId=1&from=now-24h&to=now&refresh=5s&panelId=2";
 
                 document.getElementById("panel1").src = src1;
                 document.getElementById("panel2").src = src2;
