--- a/templates/template.html
+++ b/templates/template.html
@@ -29,6 +29,8 @@
         <div class="app-wrapper d-flex flex-column">
 
             <div class="header">
+                <!-- This is a debug button -->
+                <!-- <div id="temp_btn"><button onclick="checkStream()">btn</button></div> -->
                 <div
                     class=" container d-flex flex-column flex-sm-row align-items-sm-end justify-content-between py-4">
                     <div>
