improved user control

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,7 +17,7 @@
                 // let host = 'localhost';
                 // let host = '192.168.4.240';
 
-                let src1 = "https://192.168.4.240:3000/d-solo/b41605a1-5f86-4a3a-b12d-3d2b6ca54646/new-dashboard?orgId=1&from=now-6h&to=now&panelId=1"
+                let src1 = "https://hsnu-ap:3000/d-solo/a0291635-70f8-4e1e-a20d-f888fd62677a/new-dashboard?orgId=1&from=now-6h&to=now&panelId=1";
 
 
                 document.getElementById("panel1").src = src1;
