--- a/templates/template.html
+++ b/templates/template.html
@@ -29,27 +29,18 @@
         <div class="app-wrapper d-flex flex-column">
 
             <div class="header">
-                <!-- This is a debug button -->
-                <!-- <div id="temp_btn"><button onclick="checkStream()">btn</button></div> -->
                 <div
-                    class=" container d-flex flex-column flex-sm-row align-items-sm-end justify-content-between py-4">
-                    <div>
-                        <h3><img src="/static/img/xrcube_logo.png" width="170" alt="XR Cube"> |
+                    class=" container d-flex flex-row flex-sm-row align-items-sm-end justify-content-between">
+                    <div class="container pt-4 pb-3">
+                        <h3 class="text-nowrap"><img src="/static/img/xrcube_logo.png" width="170"
+                                alt="XR Cube"> |
                             Dashboard<span id="title" class="d-none" style="color:black"> - Register
                                 Admin</span></h3>
                     </div>
+                    <div class="container d-flex flex-row" style="width:40%">
+                        <div class="tab">
 
-                    <div class="mt-3 text-end mt-sm-0">
-                        Users:
-                        <span id="total-user-count-span" class="fw-bold">0</span>
-                        ,
-                        Video Users:
-                        <span id="video-user-count-span" class="fw-bold">0</span>
-                    </div>
-                </div>
-                <div class="container d-flex flex-row">
-                    <div class="tab">
-
+                        </div>
                     </div>
                 </div>
             </div>
@@ -236,54 +227,45 @@
         <!-- template -->
         <template id="pair-template">
 
-            <div id="pair_<%= idx %>" class="d-flex justify-content-center">
-                <div class="col-6 col-md-6 col-lg-4">
-                    <div id="pair_edge_<%= idx %>" class="seat mb-4 ratio ratio-16x9">
-                        <div
-                            class="join-area d-flex justify-content-center align-items-center w-100 h-100">
-                        </div>
-                        <div class="player-area">
-                            <div id="player_edge_<%= idx %>">
+            <div id="pair_<%= idx %>" class="container d-flex flex-column align-items-center">
 
+                <div class="container row d-flex">
+                    <script id="script">
+
+                    </script>
+                    <div class="col-8">
+                        <div id="pair_edge_<%= idx %>" class="seat mb-4 ratio ratio-16x9">
+                            <div class="player-area">
+                                <div id="player_edge_<%= idx %>"></div>
+                            </div>
+                            <div class="name-holder h-25">
+                                <p id="stream-name" class="fa-2x">a</p>
                             </div>
                         </div>
-                        <div class="name-holder h-25">
-                            <p id="stream-name" class="fa-2x">a</p>
-                        </div>
                     </div>
-                </div>
-
-                <div class="col-6 col-md-6 col-lg-4">
-                    <div class="ratio ratio-16x9" style="background-color: lightgray;">
-                        <div class="d-flex flex-column align-items-center">
-                            <h3><u>XR Connection #<span id="connect_no"></span></u></h3>
-                            <p style="font-size: medium;"><b>Edge IP:</b> <span id="edge_ip"></span>
-                            </p>
-                            <p style="font-size: medium;"><b>Edge Resolution:</b> <span
-                                    id="edge_resolution"></span></p>
-                            <p style="font-size: medium;"><b>Terminal IP:</b> <span
-                                    id="terminal_ip"></span></p>
-                            <p style="font-size: medium;"><b>Terminal Resolution:</b> <span
-                                    id="terminal_resolution"></span></p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-6 col-md-6 col-lg-4">
-                    <div id="pair_terminal_<%= idx %>" class="seat mb-4 ratio ratio-16x9">
-                        <div
-                            class="join-area d-flex justify-content-center align-items-center h-100">
-                        </div>
-                        <div class="player-area">
-                            <div id="player_terminal_<%= idx %>">
-
+                    <div class="container col-4 d-flex flex-column">
+                        <div class="row" style="background-color: lightgray;">
+                            <div class="d-flex flex-column align-items-center">
+                                <h3><u>XR Connection #<span id="connect_no"></span></u></h3>
+                                <p style="font-size: medium;"><b>Edge IP:</b> <span
+                                        id="edge_ip"></span></p>
+                                <p style="font-size: medium;"><b>Edge Resolution:</b> <span
+                                        id="edge_resolution"></span></p>
+                                <p style="font-size: medium;"><b>Terminal IP:</b> <span
+                                        id="terminal_ip"></span></p>
+                                <p style="font-size: medium;"><b>Terminal Resolution:</b> <span
+                                        id="terminal_resolution"></span></p>
                             </div>
                         </div>
-                        <div class="name-holder h-25">
-                            <p id="stream-name" class="fa-2x">b</p>
+                        <div id="hardware" class="container">
+
                         </div>
                     </div>
                 </div>
+                <div id="net" class="container row">
+
+                </div>
+
             </div>
 
         </template>
@@ -332,8 +314,8 @@
             const OME_LLHLS_STREAMING_HOST = '{{llhls_streaming_host}}';
 
             // new config
-            const SEAT_PAGES = '{{seat_pages}}';
-            const MAX_STREAM_PER_PAGE = '{{max_stream_per_page}}';
+            const SEAT_PAGES = '2';
+            const MAX_STREAM_PER_PAGE = '8';
             const REGISTER_MODE = '{{register_mode}}';
         </script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
@@ -355,6 +337,7 @@
         <!-- Load OvenPlayer -->
         <script src="https://cdn.jsdelivr.net/npm/ovenplayer/dist/ovenplayer.js"></script>
 
+        <!-- Load OvenSpace -->
         <script src="/static/js/ovenspace.js"></script>
 
     </body>
