fixed grafana source

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -25,8 +25,8 @@
                     const protocal = "https";
                     const GRAFANA_HOST = "{{grafana_host}}";
                     const port = "3000";
-                    const dashboardId = "XR_Cube"
-                    const dashboard_name = "xrcube"
+                    const dashboardId = "b4307069-b390-4c30-adac-e7397c3e672bd"
+                    const dashboard_name = "xrcubee"
                     const theme = "dark"
                     const hours = 6;
 
